--- a/table.css
+++ b/table.css
@@ -1,6 +1,21 @@
-table td span img {
+table td span img, table td .tableheader img, table td .containt img, table td .Certificate img {
   width: 70px;
   height: 70px;
   align-items: center; }
+
+.tableheader {
+  font-size: 20px;
+  text-align: center;
+  color: #050505; }
+
+.containt {
+  font-size: 15px;
+  text-align: center;
+  color: blue; }
+
+.Certificate {
+  font-size: 15px;
+  text-align: center;
+  color: #3d3d00; }
 
 /*# sourceMappingURL=table.css.map */
