--- a/table.scss
+++ b/table.scss
@@ -8,4 +8,32 @@ table {
 			 }
 			}
 		}
-	}
+    }
+    
+    %span
+    {
+        font-family: Arial, Helvetica, sans-serif;
+        align-items: center;
+    }
+    .tableheader
+    {
+        @extend span;
+        font-size: 20px;
+    text-align: center;
+      color: rgb(5, 5, 5);
+
+    }
+    .containt
+    {
+        @extend span;
+        font-size: 15px;
+        text-align: center;
+          color:blue;
+    }
+    .Certificate
+    {
+        @extend span;
+        font-size: 15px;
+        text-align: center;
+          color:rgb(61, 61, 0);
+    }
