--- a/hero.css
+++ b/hero.css
@@ -20,7 +20,7 @@ body {
     color: white; 
     
   
-    background-image: url(100.jpg);
+    background-image: url(hero.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
